refactor: remove "nodos_transparentes"  image from all open theme

--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -10,7 +10,7 @@
 <% icp_license_info = getattr(settings, 'ICP_LICENSE_INFO', {})%>
 <%namespace name='static' file='static_content.html'/>
 
-<footer id="openuchile-footer" class="openuchile-bg mt-auto text-center mx-auto py-4" style="background-image: url(${static.url('open-uchile-theme/images/svg-2023/nodos_transparentes.png')});">
+<footer id="openuchile-footer" class="openuchile-bg mt-auto text-center mx-auto py-4">
   <div class="container border-0 mb-3 px-5 text-center">
     <a href="https://www.uchile.cl/" target="_blank" class="text-decoration-none">
       <img src="${static.url('open-uchile-theme/images/logo_uchile.png')}" class="img-fluid my-auto py-2 px-5" alt="UChile" style="max-height: 80px;">
