--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -84,8 +84,8 @@ from common.djangoapps.pipeline_mako import render_require_js_path_overrides
   <script type="text/javascript" src="${static.url(ie11_fix_path)}"></script>
   <% favicon_url = branding_api.get_favicon_url() %>
   <link rel="icon" type="image/x-icon" href="${favicon_url}"/>
-  <!-- OpenUChile Bootstrap & main css & font Soleil -->
-  <link href="https://fonts.cdnfonts.com/css/soleil" rel="stylesheet">
+  <!-- OpenUChile Bootstrap & main css & font Inter -->
+  <link href="https://fonts.cdnfonts.com/css/Inter" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
   <!--link rel="stylesheet" href="https://use.typekit.net/qpq8gep.css"-->
   <!-- end OpenUChile -->
