--- a/lms/templates/main_django.html
+++ b/lms/templates/main_django.html
@@ -6,8 +6,8 @@
   <title>{% block title %}{{ platform_name }}{% endblock %}</title>
 
   <link rel="icon" type="image/x-icon" href="{% favicon_path %}" />
-  <!-- OpenUChile Bootstrap & main css & font Soleil -->
-  <link href="https://fonts.cdnfonts.com/css/soleil" rel="stylesheet">
+  <!-- OpenUChile Bootstrap & main css & font Inter -->
+  <link href="https://fonts.cdnfonts.com/css/Inter" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
   <!-- end OpenUChile -->
   {% with "js/i18n/"|add:LANGUAGE_CODE|add:"/djangojs.js" as i18njs_path %}
