--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -725,7 +725,7 @@ input[type="search"]::-ms-input-placeholder {
 }
 
 .pagination .page-divider, .view-student-notes .title-search-container .wrapper-title .page-title, .view-teams .page-header .page-title, .course-wrapper .course-content .proctored-exam-skip-confirm-wrapper .msg-title, .course-wrapper .courseware-results-wrapper .proctored-exam-skip-confirm-wrapper .msg-title, .view-teams .card .card-title, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-settings .form-title, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-edit .form-title, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-group-header .title-value, .dashboard-search-results .search-info h2, .view-student-notes .placeholder-title, .course-index .accordion .course-navigation .button-chapter .group-heading, .home .page-header-secondary .last-accessed-link, div.info-wrapper section.handouts .handouts-header, .view-student-notes .note-group .course-title, .view-student-notes .note-group .tags-title, .view-teams .create-team legend, .view-teams .team-actions .title, .idash-section .message-title, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-group-add .form-title, .view-student-notes .wrapper-tabs .tab-list .tabs-label, .idash-section .subsection-title, .wrapper-course-material .course-tabs .tab a, .wrapper-course-material .course-tabs .tab a:visited, .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-controls .control, .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-controls .vcr .vidtime, .content-wrapper .course-license, .content-wrapper .xblock-license, .view-student-notes .title-search-container .wrapper-title .page-title .page-subtitle, .view-student-notes .note-group .course-subtitle, .idash-section .section-title .description, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-settings .form-fields .label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-edit .form-fields .label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-group-add .form-fields .label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .file-upload-form .form-fields .label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-settings .form-fields .form-label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-edit .form-fields .form-label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-group-add .form-fields .form-label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .file-upload-form .form-fields .form-label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-group-header .group-count, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-group-add .message-title, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-file-upload .message-title, .nav-utilities .action-toggle-message, .view-student-notes .note-group .note .wrapper-note-excerpts .note-comments .note-comment .note-comment-title, .view-student-notes .note-group .note .reference .wrapper-reference-content .reference-title, div.info-wrapper section.updates>ol>li .date, div.info-wrapper section.updates>ol article .date, div.info-wrapper section.updates section>li .date, div.info-wrapper section.updates section article .date, div.info-wrapper section.updates div>li .date, div.info-wrapper section.updates div article .date, div.info-wrapper section.updates>ol>li .toggle-visibility-button, div.info-wrapper section.updates>ol article .toggle-visibility-button, div.info-wrapper section.updates section>li .toggle-visibility-button, div.info-wrapper section.updates section article .toggle-visibility-button, div.info-wrapper section.updates div>li .toggle-visibility-button, div.info-wrapper section.updates div article .toggle-visibility-button {
-    font-family: 'Soleil', sans-serif !important;
+    font-family: 'Inter', sans-serif !important;
 }
 
 .courses-container .course-title-container{
@@ -819,6 +819,7 @@ ul.courses-list{
     width: 100%;
     height: 278px;
     object-fit: cover;
+    border-radius: .25rem;
 }
 
 #open-carousel-courses .card-img-top {
@@ -989,17 +990,18 @@ ul.courses-list{
     background: transparent;
 }
 .open-search-bar{
-    width: 100%;
+    border-radius: 8px;
     margin: auto;
     background-color: white;
     text-align: center;
     box-shadow: 0px 2px 4px 0 rgb(0 0 0 / 25%);
     position: relative;
     z-index: 10;
+    width: 50%;
+    margin-right: 50px;
 }
 .open-search-bar .row{
-    height: 100px;
-    width: 100%;
+    max-height: 64px;
     padding: 10px 30px 10px 30px;
     margin: auto;
     background-color: white;
@@ -1010,12 +1012,67 @@ ul.courses-list{
         width: 80%;
     }
 }
+@media (max-width: 991px) {
+    .open-search-bar{
+        height: 80px;
+        width: 100%;
+    }
+}
+.courses-list .card-button button.ongoing_enrollable_color,
+.courses-list .card-button button.upcoming_enrollable {
+    background: #008852;
+    border: #008852;
+    text-shadow: none;
+    height: 30px;
+}
+.courses-list .card-button button.upcoming_notenrollable_color {
+    background: #EF4035;
+    border: #EF4035;
+    text-shadow: none;
+    height: 30px;
+}
+.courses-list .card-button button.ongoing_notenrollable_color,
+.courses-list .card-button button.completed_color {
+    background: #004e98; 
+    border: #004e98;
+    text-shadow: none;
+    height: 30px;
+}
 
+.btn-advanced-open:focus:not(:disabled),
+.btn-advanced-open:hover:not(:disabled),
+.btn-advanced-open{
+    background-color: white;
+    color: black;
+    border: 1px solid #E7E7E9;
+    background-image: none;
+    box-shadow: none;
+    font-size: 1rem;
+    font-weight: 400;
+    text-shadow: none;
+    border-radius: 8px;
+    box-shadow:none;
+}
+@media (max-width: 991px){
+    .col-sm-12.col-md-3.align-content-center .btn-advanced-open{
+        margin-top: 30px;
+        margin-left: 0px;   
+    }
+}
 .open-filter-bar aside.search-facets.phone-menu{
     padding: 20px;
-    border: none;
-    box-shadow: none;
+    box-shadow: 0px 4px 9px 0px rgba(152, 160, 180, 0.25);
     margin: 0;
+    background-color: white;
+    border-radius: 12px;
+}
+#advance-button.btn-advanced-open.border-0 span{
+    color: rgba(75, 75, 75, 0.2);
+}
+
+.courses-search-btn span{
+    text-shadow: none;
+    color: #9E9EA7;
 }
 .courses-search-btn, 
 .courses-search-btn:hover, 
@@ -1064,22 +1121,26 @@ ul.courses-list{
     box-shadow: none;
     background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
 }
-.open-search-bar .open-search-col #open-filter-mobile-btn{
-    display: inline-block;
-}
 .open-search-bar .open-search-col #open-filter-mobile-body{
     text-align: left;
 }
-@media (min-width: 768px) {
-    .open-search-bar .open-search-col #open-filter-mobile-btn{
-        display: none;
-    }
-}
+
 .courses-list #list-courses{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 105px;
+}
+
+.courses-list #list-courses .row .col-xl-5 .card{
+    width: 100%;
+}
+
+#all_courses{
+    color:rgba(73, 73, 73, 1);
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: 0%;
 }
 .courses-list #list-courses .col-md-12,
 .courses-container .courses-list .col-md-6{
@@ -1088,10 +1149,7 @@ ul.courses-list{
 .courses-list .col-md-3.open-filter-bar{
     display: none;
     padding: 0;
-    background-color: white;
     z-index: 9; 
-    border-left: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
 }
 @media (min-width: 768px) {
     .courses-list .col-md-3.open-filter-bar{
@@ -1113,9 +1171,6 @@ aside .search-facets-lists .filter-btn:visited:not(.btn):focus {
     color: #565756;
     text-decoration: none;
 }
-.offcanvas-bottom#FilterOffcanvasBottom {
-    height: 85%;
-}
 aside .search-facets-lists a.filter-btn .arrow-filter {
     width: 15px;
     height: 15px;
@@ -1130,21 +1185,44 @@ aside .search-facets-lists a.filter-btn .arrow-filter {
 aside .search-facets-lists a.filter-btn.collapsed .arrow-filter {
     transform: rotate(0);
 }
+
+.open-desktop-view,
+.dropdown-menu.dropdown-menu-end.show,
+#settings-language-value {
+    font-weight: 500;
+}
+
 aside .search-facets-lists .form-check-input[type=checkbox] {
+    color: #98A0B4;
     margin-top: 2px;
     border-radius: 2em;
 }
 aside .search-facets-lists .form-check-input[type=checkbox]:checked {
     background-color: #004e98;
+    color: #98A0B4;
 }
 aside .search-facets-lists .list-group-item {
     font-size: 20px;
     padding: 5px;
     border: none;
 }
-aside .search-facets-lists label {
+aside .search-facets-lists label{
     font: inherit;
-    margin-bottom: 0;
+    margin-bottom: 20px;
+    color: #98A0B4;
+    font-size: 22px;
+    font-weight: 600 !important;
+    line-height: 17px;
+}
+
+aside .search-facets-lists .form-label{
+    color: #000000;
+}
+aside .search-facets-lists .form-select{
+    font-size: 18px;
+    font-weight: 500;
+    color: #98A0B4;
+    /* line-height: 20px; */
 }
 aside .search-facets-lists hr {
     color: #565756;
@@ -1158,17 +1236,38 @@ aside span#title-filter{
     font-weight: bolder;
     color: #565756;
 }
+#clear-filter-button{
+    background-color: white;
+    color: rgba(34, 99, 227, 1);
+    border: 2px solid rgba(34, 99, 227, 1);
+    box-shadow: none;
+    background-image: none;
+}
+#clear-filter-button:focus,
+#clear-filter-button:hover{
+    background-color:  rgba(34, 99, 227, 1);
+    color: white;
+}
 aside a#clear-filters{
-    margin-top: 9px;
-    display: block;
-    float: right;
-    color:#004e98;
-    font-weight: bolder;
-    font-size: 15px;
+    display: contents;
+    color: #2263E3;
+    font-size: 14px;
+    padding: 0px;
+    margin: 0px;
+    font-weight: 500;
+    text-shadow: none;
+    background-color: white;
+    color: rgba(34, 99, 227, 1);
+    border: 2px solid rgba(34, 99, 227, 1);
+    box-shadow: none;
+    background-image: none;
+    border-radius: 5px
 }
 aside a#clear-filters:hover,
 aside a#clear-filters:focus{
     text-decoration: none;
+    background-color:  rgba(34, 99, 227, 1);
+    color: white;
 }
 aside #active-filters{
     list-style: none;
@@ -1210,12 +1309,15 @@ aside #discovery-message{
     font-style: italic;
     font-size: 20px;
     color: #565756;
-    font-family: 'Soleil', sans-serif;
-    font-weight: lighter;
+    font-family: 'Inter', sans-serif;
+    font-weight: normal;
 }
 aside h2.open-refine-search{
-    font-size: 20px;
-    color: #565756;
+    font-size: 32px;
+    color: #4B4B4B;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0px;
 }
 .open-search-bar .open-search-col .dropdown-menu.dropdown-menu-end{
     border-radius: unset;
