--- a/lms/templates/header/header.html
+++ b/lms/templates/header/header.html
@@ -84,10 +84,6 @@ if site_status_message:
 % if header_language_selector_is_enabled():
     <% 
     languages = released_languages() 
-    flags = {
-        'en': u'\U0001f1fa\U0001f1f8',
-        'es-419': u'\U0001f1e8\U0001f1f1',
-    }
     %>
     % if len(languages) > 1:
         <form action="/i18n/setlang/" method="post" class="settings-language-form" id="language-settings-form">
@@ -101,9 +97,9 @@ if site_status_message:
             <select class="input select language-selector header-lang-selector" id="settings-language-value" name="language">
                 % for language in languages:
                     % if language[0] == LANGUAGE_CODE:
-                        <option value="${language[0]}" selected="selected">${flags.get(language[0], '')}&emsp;${language[1]}</option>
+                        <option value="${language[0]}" selected="selected">${language[1]}</option>
                     % else:
-                        <option value="${language[0]}">${flags.get(language[0], '')}&emsp;${language[1]}</option>
+                        <option value="${language[0]}">${language[1]}</option>
                     % endif
                 % endfor
             </select>
@@ -122,7 +118,7 @@ if site_status_message:
         % endif
         <%include file="navbar-logo-header.html" args="online_help_token=online_help_token"/>
         <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fa fa-bars" aria-hidden="true" style="font-size: 28px;color: white;"></i>
+            <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
         % if user.is_authenticated:
             <%include file="navbar-authenticated.html" args="online_help_token=online_help_token"/>
