--- a/lms/templates/header/navbar-not-authenticated.html
+++ b/lms/templates/header/navbar-not-authenticated.html
@@ -18,28 +18,16 @@ from django.utils.translation import ugettext as _
 <div class="collapse navbar-collapse pt-3" id="navbar">
   <ul class="navbar-nav mr-auto"></ul>
   <ul class="navbar-nav ml-auto">
-    % if settings.FEATURES.get('ENABLE_DASHBOARD_SEARCH'):
-    <li class="nav-item my-auto">
-        <div class="search-container">
-            <form action="/courses" method="get">
-              <input class="search expandright" id="searchright" type="search" name="search_query" placeholder="${_('Search')}">          
-              <button class="searchbutton" type="submit" for="searchright">
-                <span class="mglass">&#9906;</span>
-              </button>
-            </form>
-        </div>
-    </li>
-    % endif
     <li class="open-desktop-view nav-item my-auto">
       <a class="nav-link my-auto " href="${marketing_link('COURSES')}">${_('Explore courses')}</a>
     </li>
     %if allows_login:
-      <li class="nav-item my-auto">
-        <a class="nav-link my-auto ${'active ' if '/login' in request.path else ''}" href="/login${login_query()}">${_('Sign in')}</a>
+      <li class="open-desktop-view nav-item my-auto">
+        <a class="nav-link my-auto sign-in d-flex ${'active ' if '/login' in request.path else ''}" href="/login${login_query()}">${_('Sign in')}</a>
       </li>
     %endif
-    <li class="nav-item my-auto">
-      <a class="nav-link my-auto ${'active ' if '/register' in request.path else ''}" href="/register" target="_blank" >${_('Register')}</a>
+    <li class="open-desktop-view nav-item my-auto">
+      <a class="nav-link my-auto register d-flex ${'active ' if '/register' in request.path else ''}" href="/register" target="_blank" >${_('Register')}</a>
     </li>
     <li class="open-desktop-view nav-item dropdown my-auto mx-0 ml-xl-3 py-1">
       <a class="nav-link" href="#" id="openMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
