refactor: change separator from png to svg

--- a/lms/templates/certificates/validate_certificates.html
+++ b/lms/templates/certificates/validate_certificates.html
@@ -25,7 +25,7 @@
         <img src="${static.url('open-uchile-theme/images/banner-04-bg.jpg')}" alt='${_("Certificates validation")}' class="mx-auto openuchile-header d-block">
         <div class="centered">${_("Certificates validation")}</div>
     </div>
-    <img class="uchile-separator" src="${static.url('open-uchile-theme/images/uchile_separator.png')}" alt="">
+    <img class="uchile-separator" src="${static.url('open-uchile-theme/images/uchile_separator.svg')}" alt="">
     <div class="container px-3 mt-5">
         <div class="card col-11 col-md-8 col-lg-7 mx-auto shadow-lg px-5 py-4 mb-5 rounded-lg">
             <div class="card-body">
