--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -46,7 +46,7 @@
 % if context.get('include_language_selector', footer_language_selector_is_enabled()):
     <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
 % endif
-<img class="uchile-separator" src="${static.url('open-uchile-theme/images/uchile_separator.png')}" alt="">
+<img class="uchile-separator" src="${static.url('open-uchile-theme/images/uchile_separator.svg')}" alt="">
 
 % if include_dependencies:
   <%static:js group='base_vendor'/>
