--- a/lms/templates/header/header.html
+++ b/lms/templates/header/header.html
@@ -80,7 +80,7 @@ if site_status_message:
     %endfor    
 %endif
 
-<img class="uchile-separator" src="${static.url('open-uchile-theme/images/uchile_separator.png')}" alt="">
+<img class="uchile-separator" src="${static.url('open-uchile-theme/images/uchile_separator.svg')}" alt="">
 % if header_language_selector_is_enabled():
     <% 
     languages = released_languages() 
