--- a/lms/templates/static_templates/faq.html
+++ b/lms/templates/static_templates/faq.html
@@ -29,7 +29,7 @@
         <img src="${static.url('open-uchile-theme/images/banner-03-bg.jpg')}" alt='${_("FAQ")}' class="mx-auto openuchile-header d-block">
         <div class="centered">${_("FAQ")}</div>
     </div>
-    <img class="uchile-separator" src="${static.url('open-uchile-theme/images/uchile_separator.png')}" alt="">
+    <img class="uchile-separator" src="${static.url('open-uchile-theme/images/uchile_separator.svg')}" alt="">
     <div class="container px-3">
         <h1 class="text-center">
             ${_('Frequently Asked Questions')}
