feat: add effort, duration and price to course card

--- a/lms/templates/course.html
+++ b/lms/templates/course.html
@@ -19,7 +19,7 @@ now = timezone.now()
 
 <%page args="course" expression_filter="h"/>
 <%
-    course_about = reverse('about_course', args=[text_type(course["id"])])
+    course_about = reverse('about_course', args=[text_type(course['id'])])
 %>
 <script>
   function show_default_image() {
@@ -48,12 +48,12 @@ now = timezone.now()
             <div class="row g-0 p-0">
               <div class="col-2 m-0">
                 <div class="open-course-date-icon">
-                  <img src="${static.url('open-uchile-theme/images/svg-2023/fecha inicio.svg')}">
+                  <img src="${static.url('open-uchile-theme/images/svg-2023/fecha termino.svg')}">
                 </div>
               </div>
               <div class="col-10">
                 <div class="open-course-date-text ml-3">
-                  <strong><span>${_("Duration")}</span></strong>
+                  <strong><span>${_("Classes Start")}</span></strong>
                   <div class="course-date localized_datetime" aria-hidden="true" data-format="shortDate" data-datetime="${course_date_string}" data-language="${LANGUAGE_CODE}" data-string=""></div>
                 </div>
               </div>
@@ -68,8 +68,12 @@ now = timezone.now()
               </div>
               <div class="col-10">
                 <div class="open-course-date-text ml-3">
-                  <strong><span>${_("Modality")}</span></strong>
-                  <div class="course-date localized_datetime" aria-hidden="true" data-format="shortDate" data-datetime="${course_date_string}" data-language="${LANGUAGE_CODE}" data-string=""></div>
+                  <strong><span>${_("Pacing")}</span></strong>
+                  %if bool(course["extra_data"]["self_paced"]) == True:
+                  <div class="course-date" aria-hidden="true">${_("Student paced")}</div>
+                  % else:
+                  <div class="course-date" aria-hidden="true">${_("Instructor paced")}</div>
+                  % endif
                 </div>
               </div>
             </div>
@@ -86,7 +90,15 @@ now = timezone.now()
               <div class="col-10">
                 <div class="open-course-date-text ml-3">
                   <strong><span>${_("Price")}</span></strong>
-                  <div class="course-date localized_datetime" aria-hidden="true" data-format="shortDate" data-datetime="${course_date_string}" data-language="${LANGUAGE_CODE}" data-string=""></div>
+                  <div class="course-date" aria-hidden="true">
+                      <% course_price = course["extra_data"]["price"] %>
+                      %if course_price not in ['Gratis', 'Free', None, "None"]:
+                        <% aux_price = int(course_price[1:]) %>
+                        $ ${f'{aux_price:,}'.replace(',', '.')}
+                      %else:
+                          ${course_price}
+                      %endif
+                  </div>
                 </div>
               </div>
             </div>
