--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -1569,11 +1569,7 @@ aside h2.open-refine-search{
 
 .open-carousel-orgs .owl-carousel .owl-item .item{
     max-width: 400px;
-  }
-  .owl-theme .owl-dots .owl-dot{
-    box-shadow: none;
-  }
-
+}
 
  .open-carousel-orgs  .owl-carousel .owl-stage-outer {
     padding-bottom: 1%;
@@ -2048,6 +2044,45 @@ body .wrapper-preview-menu .preview-menu {
     font-size: 60px;
     line-height: normal;
 }
+.open-course-date-icon{
+    width: 35px;
+}
+
+  .course-info .media .icon-play {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    background-image: -webkit-linear-gradient(-90deg, rgba(0, 156, 221, 0.58), rgba(0, 156, 221, 0.28));
+    background-image: linear-gradient(-90deg, rgba(0, 156, 221, 0.58), rgba(0, 156, 221, 0.28));
+    box-shadow: 0 1px 12px 0 rgb(0 0 0 / 40%);
+    border: 2px solid rgba(255, 255, 255, 0.8);
+    border-radius: 100px;
+    height: 80px;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    width: 80px;
+  }
+  .course-info .media .icon-play:after {
+    color: rgba(255,255,255,0.8);
+    content: "\25B6";
+    display: block;
+    font: normal 2em/1em "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    left: 50%;
+    margin-left: -11px;
+    margin-top: -16px;
+    position: absolute;
+    top: 50%;
+  }
+  .modal.video-modal{
+    width: 602px;
+    height: auto;
+  }
+  .modal.video-modal .inner-wrapper{
+    width: auto;
+    height: auto ;
+  }
 
 @media (max-width: 405px) {
     .index-text-presentation {
