--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -200,7 +200,7 @@ from common.djangoapps.pipeline_mako import render_require_js_path_overrides
 
     <div class="marketing-hero"><%block name="marketing_hero"></%block></div>
 
-    <div class="main-container openuchile-bg" id="content" dir="${static.dir_rtl()}">
+    <div class="main-container openuchile-bg mb-5" id="content" dir="${static.dir_rtl()}">
       ${self.body()}
       <%block name="bodyextra"/>
     </div>
