--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -759,7 +759,29 @@ input[type="search"]::-ms-input-placeholder {
     text-transform: capitalize;
 }
 .trending-course-border{
-    border-top: 3px solid #172c6b;
+    border-top: 3px solid #069BDC;
+    width: 60px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+.explorer-courses-border{
+    border-top: 3px solid #1C4D94;
+    width: 60px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+.new-courses-title-container{
+    font-size: 30px;
+    color: #494949;
+    text-align: center;
+    font-weight: 1000;
+    margin-bottom: 0;
+    text-transform: capitalize;
+}
+.new-courses-border{
+    border-top: 3px solid #1C4D94;
     width: 60px;
     display: flex;
     margin-left: auto;
@@ -777,11 +799,7 @@ input[type="search"]::-ms-input-placeholder {
     max-width: 1765px;
 }
 /* New course card */
-@media screen and (min-width: 991px) {
-    .courses-list .card{
-        width: 874px;
-    }
-}
+
 @media screen and (min-width: 1900px) {
     ul.courses-list li{
         float: left
@@ -835,7 +853,6 @@ ul.courses-list{
 {
     padding-left: 5px;
 }
-.courses-list .card-body,
 #open-carousel-courses .card-body{
     padding: 0;
     padding-top: 10px;
@@ -855,6 +872,8 @@ ul.courses-list{
     -webkit-box-orient: vertical;
     font-weight: bold;
     margin: 0;
+    max-height: 46px;
+    height: 46px;
 }
 .courses-list .card-body .card-logo,
 #open-carousel-courses .card-body .card-logo{
@@ -864,7 +883,6 @@ ul.courses-list{
 }
 .courses-list .card-body .ct1,
 #open-carousel-courses .card-body .ct1{
-    /*height: 45px;*/
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -873,19 +891,23 @@ ul.courses-list{
     line-height: 16px;
     font-weight: bold;
     text-transform: uppercase;
+    height: 17px;
 }
 .courses-list .card-body .ct2,
 #open-carousel-courses .card-body .ct2{
-   /* height: 110px;*/
     overflow: hidden;
     margin-top: 10px;
     margin-bottom: auto;
     font-weight: lighter;
-    /*padding: 0 15px;*/
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     line-height: 16px;
+    max-height: 34px;
+    height: 34px;
+}
+.courses-list .card-body .ct3 .col-md-6 .row{
+    display: contents;
 }
 .courses-list .card-body .ct3,
 #open-carousel-courses .card-body .ct3{
@@ -895,7 +917,6 @@ ul.courses-list{
     /*margin-top: 30px;*/
     margin-bottom: 5px;
     font-size: 13px;
-    min-width: 90%;
 }
 .courses-list .card-body .ct3 .col-md-12,
 #open-carousel-courses .card-body .ct3 .col-md-12{
@@ -904,6 +925,7 @@ ul.courses-list{
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    height: 55px;
 }
 .courses-list .card-body .ct3 .col-md-12 .open-course-date-icon, 
 .courses-list .card-body .ct3 .col-md-6 .open-course-date-icon,
@@ -928,10 +950,10 @@ ul.courses-list{
     display: flex;
     flex-direction: row;
     align-items: center;
+    height: 55px;
 }
 .courses-list .card-body .ct3 .col-md-6 .open-course-date-text,
 #open-carousel-courses .card-body .ct3 .col-md-6 .open-course-date-text{
-    width: calc(100% - 35px);
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -939,7 +961,7 @@ ul.courses-list{
 }
 .courses-list .card-body .ct3 .col-md-6 .open-course-date-text span,
 #open-carousel-courses .card-body .ct3 .col-md-6 .open-course-date-text span{
-    font-weight: lighter;
+    font-weight: bolder;
 }
 
 .courses-list .card-body .ct3 .col-md-6 .open-course-date-text .course-date,
@@ -1129,7 +1151,7 @@ ul.courses-list{
     align-items: center;
 }
 
-.courses-list #list-courses .row .col-xl-5 .card{
+.courses-list #list-courses .row .col-md-5 .card{
     width: 100%;
 }
 
@@ -1595,6 +1617,7 @@ body .wrapper-preview-menu .preview-menu {
     border: none;
     border-radius: 5px;
     margin-bottom:1.5rem;
+    font-weight: 500;
 }
 .register-button-color, .register-button-color:hover:not(:disabled){
     cursor: pointer;
