--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -709,6 +709,7 @@ a.nav-link.user-menu:hover,
     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.09);
     background-color: white;
     padding-top: 1rem;
+    margin-top: 1rem;
     padding-bottom: 1rem;
     font-family: 'Raleway', sans-serif !important;
 }
@@ -745,13 +746,6 @@ a.nav-link.user-menu:hover,
 #open-navbar .searchbutton:active{
    background: #0c1738;
    color: #0d3d8f;
-}
-#open-navbar .search-container {
-   position: relative;
-   display: inline-block;
-   height: 35px;
-   width: 50px;
-   vertical-align: middle;
 }
 
 .mglass {
@@ -983,7 +977,7 @@ ul.courses-list{
 }
 .card-img-top {
     width: 100%;
-    height: 278px;
+    aspect-ratio: 16 / 9;
     object-fit: cover;
     border-radius: .25rem;
 }
@@ -992,7 +986,7 @@ ul.courses-list{
     width: 100%;
     height: auto;
     object-fit: cover;
-    min-height: 278px;
+    min-height: 185px;
 }
 .courses-list .col-md-7,
 #open-carousel-courses .col-md-7{
@@ -1182,7 +1176,7 @@ ul.courses-list{
         width: 80%;
     }
 }
-@media (max-width: 991px) {
+@media (max-width: 1200px) {
     .open-search-bar{
         height: 80px;
         width: 100%;
@@ -1379,6 +1373,7 @@ aside .search-facets-lists .list-group-item {
     font-size: 20px;
     padding: 5px;
     border: none;
+    line-height: 25px;
 }
 aside .search-facets-lists label{
     font: inherit;
@@ -1396,7 +1391,6 @@ aside .search-facets-lists .form-select{
     font-size: 18px;
     font-weight: 500;
     color: #98A0B4;
-    /* line-height: 20px; */
 }
 aside .search-facets-lists hr {
     color: #565756;
@@ -1540,8 +1534,8 @@ aside h2.open-refine-search{
     background: #172C6B;
 }
 .open-carousel-top-courses .carousel-wrap {
-    margin-right: auto;
-    margin-left: auto;
+    margin-right: 5px;
+    margin-left: 5px;
     padding: 1% 5%;
     width: 100%;
     position: relative;
@@ -1550,15 +1544,17 @@ aside h2.open-refine-search{
 .open-carousel-orgs{
     width:100%;
     display: flex;
-    box-shadow: 0px 4px 8px 2px rgb(0 0 0 / 20%);
     background: white;
 }
 .open-carousel-orgs .carousel-wrap {
     margin-right: auto;
     margin-left: auto;
     padding: 1% 5%;
-    width: 70%;
+    width: 100%;
     position: relative;
+  }
+  .open-carousel-orgs .owl-carousel .owl-item img{
+    max-height: 100px;
   }
 
   /* fix blank or flashing items on carousel */
@@ -1570,11 +1566,27 @@ aside h2.open-refine-search{
   .owl-theme .owl-dots .owl-dot{
     box-shadow: none;
   }
-  .open-carousel-orgs .owl-carousel .owl-item .item{
+
+.open-carousel-orgs .owl-carousel .owl-item .item{
     max-width: 400px;
   }
-  .owl-carousel .owl-item {
-    width: 316px !important;
+  .owl-theme .owl-dots .owl-dot{
+    box-shadow: none;
+  }
+
+
+ .open-carousel-orgs  .owl-carousel .owl-stage-outer {
+    padding-bottom: 1%;
+ }
+@media (max-width: 500px){
+    .open-carousel-orgs .owl-carousel .owl-item .item{
+        max-width: 300px;
+    }
+}
+
+  .owl-carousel-top-courses .owl-item .item{
+    width: 400px;
+    max-width: 80vw;
   }
   @media (min-width: 600px) {
     .owl-carousel-top-courses  .owl-item {
@@ -1593,6 +1605,18 @@ aside h2.open-refine-search{
         margin-right: 20px !important;
     }
   }
+
+.open-carousel-orgs .carousel-wrap .owl-theme .owl-dots .owl-dot.active span{
+    background: #004B93 ;
+  }
+.open-carousel-top-courses .carousel-wrap .owl-theme .owl-dots .owl-dot.active span{
+    background: #FFFFFF ;
+  }
+.open-carousel-top-courses .carousel-wrap .owl-theme .owl-dots .owl-dot span,
+.open-carousel-orgs .carousel-wrap .owl-theme .owl-dots .owl-dot span{
+    background: #999999 ;
+  }
+
   /* end fix */
   .owl-nav > button, .owl-nav > button:active, .owl-nav > button:focus{
     border-radius: 0;
@@ -1615,12 +1639,14 @@ aside h2.open-refine-search{
   .owl-nav .owl-next {
     right: -30px;
   }
+  .owl-carousel-top-courses .owl-stage,
   .owl-carousel .owl-stage {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  .owl-nav{
+.owl-carousel .owl-dots,
+.owl-carousel-top-courses .owl-dots{
     display: block !important;
   }
 
@@ -1686,7 +1712,7 @@ aside h2.open-refine-search{
   }
 .view-student-notes .wrapper-tabs .tab-list .tabs-label, .idash-section .subsection-title, .wrapper-course-material .course-tabs .tab a, .wrapper-course-material .course-tabs .tab a:visited, .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-controls .control, .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-controls .vcr .vidtime, .content-wrapper .course-license, .content-wrapper .xblock-license, .view-student-notes .title-search-container .wrapper-title .page-title .page-subtitle, .view-student-notes .note-group .course-subtitle, .idash-section .section-title .description, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-settings .form-fields .label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-edit .form-fields .label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-group-add .form-fields .label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .file-upload-form .form-fields .label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-settings .form-fields .form-label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-edit .form-fields .form-label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-group-add .form-fields .form-label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .file-upload-form .form-fields .form-label, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-group-header .group-count, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-group-add .message-title, .instructor-dashboard-wrapper-2 section.idash-section#cohort_management .cohort-management-file-upload .message-title {
     font-size: 15px;
-    font-weight: lighter;
+    font-weight: normal;
 }
 .breadcrumbs {
     font-weight: lighter !important;
@@ -1968,15 +1994,19 @@ body .wrapper-preview-menu .preview-menu {
     font-weight: 400;
     font-style: normal;
 }
-.text-align-justify{
-    text-align: justify;
-}
 .tab-content .tab-pane .image-tab{
-    background-size: 75%;
+    background-size: auto;
     background-repeat: no-repeat;
 }
-.image-tab .text-align-justify{
+@media screen and (min-width: 991px) {
+    .tab-content .tab-pane .image-tab{
+        background-size: 75%;
+    }
+}
+.image-tab .text-justify{
     background-color: white;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.09);
+    font-weight: 200;
 }
 .about-us-tab{
     background-image: url('/static/open-uchile-theme/images/svg-2023/about-us.svg');
@@ -1988,21 +2018,12 @@ body .wrapper-preview-menu .preview-menu {
     background-image: url('/static/open-uchile-theme/images/svg-2023/about-uchile.svg');
 }
 .index-front-page{
-    background-image: url('/static/open-uchile-theme/images/svg-2023/bannerOpenUchile.svg');  
-    min-width: 100%;
-    max-width: 100%;
-    height: auto;
-    min-height: 550px;
-}
-.index-front-page .p{
-    font-size: 60px;
-}
-.index-front-page{
     background-image: url('/static/open-uchile-theme/images/svg-2023/bannerOpenUchile.svg');
     min-width: 100%;
     max-width: 100%;
     height: auto;
     min-height: 550px;
+    background-size: cover;
 }
 .index-front-page .p{
     font-size: 60px;
@@ -2016,4 +2037,40 @@ body .wrapper-preview-menu .preview-menu {
     color: #008852;
     text-decoration: none;
     background-color: white;
+}
+
+.owl-dot{
+    box-shadow: none;
+}
+
+.index-text-presentation{
+    font-weight: 700;
+    font-size: 60px;
+    line-height: normal;
+}
+
+@media (max-width: 405px) {
+    .index-text-presentation {
+        font-size: 12vw;
+    }
+}
+@media (max-width: 768px) {
+    .tab-content-text{
+        margin-top: 50%;
+    }
+    .tab-content .tab-pane .image-tab{
+        background-size: contain;
+    }
+}
+
+@media (max-width: 576px) {
+    .settings-language-form{
+        padding: 0px;
+    }
+}
+
+@media screen and (min-width: 991px) {
+    #open-navbar .nav-link.register, #open-navbar .nav-link.sign-in {
+        width: 140px;
+    }
 }
